align and justify children of div, and spacing between elements resolved.

--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -1,52 +1,49 @@
+.container {
+    display: flex;
+}
+
+.main {
+    /* flex: 1; */
+    background-color: #fff;
+    height: 900px;
+    flex-direction: column;
+}
+
 .header {
+    flex: 0.15;
+    background-color: #282c34;
+}
+
+.first {
+    flex: 0.7;
+}
+
+.second {
     flex: 0.3;
-    background-color: #282c34
+    background-color: antiquewhite
 }
 
 .form {
-    
+    border: 1px dotted #999;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    /* margin: ; */
+    /* background-color: red; */
 }
 
-.input-container {
-    /* border: 1px solid red */
-    flex-direction: row;
-    width: 300;
-    height: 200;
-    background-color: aqua
-}
-
-.email {
-    border-color: green;
-    padding-right: 10;
-    padding-left: 10;
-}
-
-.pass {
-    border-color: yellow
+.form > * { 
+    /* TODO: Direct descendant selector lets one control spacing between child elements */
+    /* padding: 0 20px 0 20px; */
+    margin: 0 20px 0 20px;
 }
 
 .input {
-    /* background-color: black; */
-    border-color: whitesmoke;
-    border-radius: 20;
-    border-width: 0.5;
-    padding: 10;
-    /* height: "80px"; */
-    /* width:"120px"; */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-
+    font-family: 'Avenir Next';
+    border: 2px dashed #fff;
+    border-radius: 10px;
 }
 
-.input::placeholder {
-    color:gray;
-    /* font-size: 29; */
-  }
-
-
-/* Body of main Page */
-
 .body {
-    flex: 0.7;
-    background-color: brown;
-    height: 100%;
+    flex: 0.85;
 }
